--- a/game/templates/home.html
+++ b/game/templates/home.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">    
 </head>
 <body>
+    <div class="top-bar">
+		
+		<p> Welcome to losing your money on slow horses </p>
+        <div class="countdown" id="countdown"></div>
+        <button class="login-button">Login</button>
+    </div>
     <div class="container">
         <div class="countdown" id="countdown"></div>
         <div class="menu">
@@ -20,7 +26,7 @@
             </ul>
         </div>
         <div class="image">
-            <img src="../static/horse_race.gif" alt="Horse Racing GIF" width="300">
+            <!img src="../static/horse_race.gif" alt="Horse Racing GIF" width="300">
         </div>
     </div>
 
